# playa

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  renovate.json
.claude/skills/update-map/: SKILL.md
.claude/skills/update-tags/: SKILL.md
.github/workflows/: refresh.yml
backend/: pyproject.toml
backend/src/playa/: __init__.py  builder.py  cli.py  config.py  fetcher.py  merger.py  meta.py  models.py  parsers.py  scraper.py  tagger.py  timeparser.py
backend/src/playa/sources/: __init__.py  api.py  directory.py
backend/src/playa/templates/: site.html
backend/tests/: test_api_source.py  test_art_model.py  test_builder.py  test_merger.py  test_meta.py  test_parsers.py  test_release_notes.py  test_tagger.py  test_timeparser.py
bm_camps/: __init__.py  builder.py  cli.py  config.py  merger.py  meta.py  models.py  timeparser.py
bm_camps/templates/: site.html
client/: esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
client/src/: crypto.ts  data.ts  index.tsx  registerSW.ts  types.ts
client/tests/: CampCard.test.ts  Toolbar.test.ts  _dom.ts  address.test.ts  art.test.ts  crypto.test.ts  data.test.ts  embargo.test.ts  exportImport.test.ts  friendColor.test.ts  highlight.test.ts  secureStore.test.ts  share.test.ts  storage.test.ts  useFavorites.test.ts  useFriends.test.ts  useMeetSpots.test.ts  useReleaseNotes.test.ts  useVersionCheck.test.ts
data/: denylist.txt
docs/: 00-index.md  01-overview.md  02-tech-stack.md  03-build-pipeline.md  04-data-encryption.md  05-password-management.md  06-multi-tab-sync.md  07-offline-pwa.md  08-versioning-and-release-notes.md  09-share-and-import.md  10-map-system.md  11-schedule-system.md  12-deployment-and-ci.md  13-tos-compliance.md  14-refresh-cycle.md  15-data-sources.md  revocation-plan.md
scripts/: fetch_all.sh  scrape_all.sh
site/: CNAME  manifest.webmanifest
tests/: test_builder.py  test_merger.py  test_meta.py  test_parsers.py  test_tagger.py  test_timeparser.py
(+56 files in other folders)
